test/fail/varargs-not-enough.grace
method name(first, *second) {}

name
